--- a/lib/rush_hour_web/live/page_live.html.heex
+++ b/lib/rush_hour_web/live/page_live.html.heex
@@ -5,7 +5,7 @@
 
 <section class="flex flex-col items-center justify-center">
   <div class="flex flex-row text-center">
-    <List.render data={@data} />
+    <List.render data={@data} socket={@socket} />
   </div>
   <div class="mt-2">
     <div class="flex items-center space-x-1">
