--- a/lib/rush_hour_web/live/page_live.html.heex
+++ b/lib/rush_hour_web/live/page_live.html.heex
@@ -2,11 +2,12 @@
   <h1 class="mb-4 text-3xl font-medium text-gray-900 title-font sm:text-4xl"><%= gettext "Welcome to Rush Hour!" %></h1>
   <p class="mb-8 leading-relaxed">Most up to date rushing statistics for "all" NFL players</p>
 </section>
-<section class="text-center pb-3">
+<section class="flex flex-row text-center pb-3 justify-center">
   <%= form_for :search, "#", [phx_change: "search"],  fn f -> %>
     <%= label f, :search %>
     <%= text_input f, :query, value: @search %>
   <% end %>
+  <%= link("Download", to: Routes.download_path(RushHourWeb.Endpoint, :download_csv, search: @search, sort_by: @sort_by), class: "ml-4 px-4 py-2 text-gray-500 bg-gray-300 rounded-md hover:bg-blue-400 hover:text-white hover:cursor-pointer") %>
 </section>
 <section class="flex flex-col items-center justify-center">
   <div class="flex flex-row text-center">
