--- a/lib/rush_hour_web/live/page_live.html.heex
+++ b/lib/rush_hour_web/live/page_live.html.heex
@@ -3,7 +3,7 @@
   <p class="mb-8 leading-relaxed">Most up to date rushing statistics for "all" NFL players</p>
 </section>
 <section class="flex flex-row text-center pb-3 justify-center">
-  <%= form_for :search, "#", [phx_change: "search"],  fn f -> %>
+  <%= form_for :search, "#", [phx_submit: "nothing", phx_change: "search"],  fn f -> %>
     <%= label f, :search %>
     <%= text_input f, :query, value: @search %>
   <% end %>
@@ -13,7 +13,7 @@
   <div class="flex flex-row text-center">
     <List.render data={@data} socket={@socket} />
   </div>
-  <div class="mt-2">
+  <div class="pb-4 mt-2">
     <div class="flex items-center space-x-1">
       <div phx-click="previous" class="px-4 py-2 text-gray-500 bg-gray-300 rounded-md hover:bg-blue-400 hover:text-white">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
